--- a/templates/wallOf/secrete.html
+++ b/templates/wallOf/secrete.html
@@ -17,10 +17,12 @@
 
 
         textarea {
-        {#border-radius: 0.5rem; background-color: #3C8FC2;#} background-color: #343A40;
+        {#border-radius: 0.5rem; background-color: #3C8FC2;#}
+            background-color: #343A40;
             color: white;
 
-        {#font-weight: bold;#} font-size: medium;
+        {#font-weight: bold;#}
+            font-size: medium;
         }
 
     </style>
