--- a/templates/wallOf/frustrations.html
+++ b/templates/wallOf/frustrations.html
@@ -14,8 +14,6 @@
     {#                background-color: #343A40;#}
     {#        }#}
     <style>
-
-
         textarea {
         {#border-radius: 0.5rem; background-color: #3C8FC2;#} background-color: #343A40;
             color: white;
@@ -23,6 +21,9 @@
         {#font-weight: bold;#} font-size: medium;
         }
 
+        .input_here {
+           background-color: #3C8FC2;
+        }
     </style>
 
 {% endblock %}
