--- a/templates/wallOf/advice.html
+++ b/templates/wallOf/advice.html
@@ -12,6 +12,10 @@
         textarea {
             background-color: #a000a0;
         }
+
+        .input_here {
+            background-color: #a000a0;
+        }
     </style>
 {% endblock %}
 
