--- a/templates/wallOf/secrete.html
+++ b/templates/wallOf/secrete.html
@@ -9,20 +9,17 @@
 
 {% block style %}
 
-    {#        body{#}
-    {#            background-color: #747476;#}
-    {#                background-color: #343A40;#}
-    {#        }#}
     <style>
 
 
         textarea {
-        {#border-radius: 0.5rem; background-color: #3C8FC2;#}
             background-color: #343A40;
             color: white;
-
-        {#font-weight: bold;#}
             font-size: medium;
+        }
+
+        .input_here {
+            background-color: #343A40;
         }
 
     </style>
