--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -212,6 +212,15 @@
         }
 
 
+
+
+
+
+
+
+
+
+
         /*base px == 16*/
 
         @media (min-width: 20em) {
@@ -314,6 +323,109 @@
                 font-size: 2vw;
             }
         }
+
+
+
+
+
+
+
+
+
+
+
+
+        /*
+        // Extra small devices (portrait phones, less than 576px)
+        // No media query since this is the default in Bootstrap
+
+        // Small devices (landscape phones, 576px and up)*/
+        @media (min-width: 36em) {
+            .posting {
+                font-size: 3vw;
+            }
+
+            .date-it {
+                font-size: 2vw;
+            }
+
+            .title-it {
+                font-size: 4vw;
+            }
+        }
+
+
+        /*        // Medium devices (tablets, 768px and up)*/
+        @media (min-width: 48em) {
+            .posting {
+                font-size: 3vw;
+            }
+
+            .date-it {
+                font-size: 1.5vw;
+            }
+
+            .title-it {
+                font-size: 3.5vw;
+            }
+        }
+
+
+        /*        // Large devices (desktops, 992px and up)*/
+        @media (min-width: 62em) {
+            .posting {
+                font-size: 2vw;
+            }
+
+            .date-it {
+                font-size: 1vw;
+            }
+
+            .title-it {
+                font-size: 2.6vw;
+            }
+        }
+
+        /*        // Extra large devices (large desktops, 1200px and up)*/
+        @media (min-width: 75em) {
+            .posting {
+                font-size: 1.5vw;
+            }
+
+            .date-it {
+                font-size: 0.6vw;
+            }
+
+            .title-it {
+                font-size: 2vw;
+            }
+        }
+
+        @media (min-width: 100em) {
+
+            /* hi-res laptops and desktops */
+            .posting {
+                font-size: 1.5vw;
+            }
+
+            .date-it {
+                font-size: 0.6vw;
+            }
+
+            .title-it {
+                font-size: 2vw;
+            }
+        }
+
+
+
+
+
+
+
+
+
+
 
 
     </style>
