--- a/templates/wallOf/advice.html
+++ b/templates/wallOf/advice.html
@@ -25,7 +25,7 @@
 
 
 {% block logo %}
-    <a href="{% url 'advice' %}">
+    <a href="{% url 'wisdom' %}">
         <img src="{% static  'wall headers/Wall Of Wisdom.png' %}" class="img-fluid" id="title_it" alt="website logo"
              style="max-height: 3rem;" title="wisdom on these youngings!">
     </a>
