--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -69,26 +69,9 @@
         gtag('config', 'UA-143029228-1');
     </script>
 
+    <link rel="stylesheet" href="{% static 'css/wallOf/wallOf style.css' %}">
+    <script async src="{% static 'JS/wallOf/scriptingJs.js' %}"></script>
 
-    <script>
-        new WOW().init();
-
-        var wow = new WOW(
-            {
-                boxClass: 'wow',      // animated element css class (default is wow)
-                animateClass: 'animated', // animation css class (default is animated)
-                offset: 0,          // distance to the element when triggering the animation (default is 0)
-                mobile: true,       // trigger animations on mobile devices (default is true)
-                live: true,       // act on asynchronously loaded content (default is true)
-                callback: function (box) {
-                    // the callback is fired every time an animation is started
-                    // the argument that is passed in is the DOM node being animated
-                },
-                scrollContainer: null // optional scroll container selector, otherwise use window
-            }
-        );
-        wow.init();
-    </script>
 
 
     {% block extra_head_at_end %}
@@ -97,445 +80,6 @@
 
 
     <style>
-        {% comment %}        body{
-                    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQByf_x1jOhHRrRfoZ2me4PiVnmsdwH3u4ZVCtRWSDUluMAjONX");
-                }{% endcomment %}
-        @import url('https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap');
-        @import url('https://fonts.googleapis.com/css?family=Londrina+Solid&display=swap');
-
-
-        #id_title {
-            margin-left: 3.5rem;
-        }
-
-        .input_here {
-            margin-left: 0.5rem;
-        }
-
-        #title_it {
-            font-family: 'Londrina Solid', 'Luckiest Guy', cursive;
-        }
-
-        textarea {
-            border-radius: 0.5rem;
-            background-color: #3C8FC2;
-            color: white;
-            font-weight: bold;
-            font-size: medium;
-        }
-
-
-        ::-webkit-input-placeholder {
-            /* WebKit, Blink, Edge */
-            color: white !important;
-        }
-
-        :-moz-placeholder {
-            /* Mozilla Firefox 4 to 18 */
-            color: white !important;
-            opacity: 1;
-        }
-
-        ::-moz-placeholder {
-            /* Mozilla Firefox 19+ */
-            color: white !important;
-            opacity: 1;
-        }
-
-        :-ms-input-placeholder {
-            /* Internet Explorer 10-11 */
-            color: white !important;
-        }
-
-        ::-ms-input-placeholder {
-            /* Microsoft Edge */
-            color: white !important;
-        }
-
-        ::placeholder {
-            /* Most modern browsers support this now. */
-            color: #e5e5e5 !important;
-        }
-
-
-        label {
-            font-style: italic;
-            font-weight: bold;
-        }
-
-
-        .success_it {
-            -webkit-animation: seconds 1.0s forwards;
-            -webkit-animation-iteration-count: 1;
-            -webkit-animation-delay: 5s;
-            animation: seconds 1.0s forwards;
-            animation-iteration-count: 1;
-            animation-delay: 3s;
-            position: relative;
-
-        }
-
-
-        @-webkit-keyframes seconds {
-            0% {
-                opacity: 1;
-            }
-            100% {
-                opacity: 0;
-                left: -9999px;
-                position: absolute;
-            }
-        }
-
-        @keyframes seconds {
-            0% {
-                opacity: 1;
-            }
-            100% {
-                opacity: 0;
-                left: -9999px;
-                position: absolute;
-            }
-        }
-
-        #id_title {
-            margin-left: 1.2%;
-        }
-
-        #chars {
-            padding-left: 8%;
-        }
-
-        .count-chars {
-            padding: 0;
-            margin: 0;
-        }
-
-
-        /*base px == 16*/
-
-        @media (min-width: 20em) {
-
-            /*320px*/
-            /* smartphones, iPhone, portrait 480x320 phones */
-            .date-it {
-                font-size: 2vw;
-            }
-
-            .posting {
-                font-size: 3vw;
-            }
-
-            .title-it {
-                font-size: 3.5vw;
-            }
-        }
-
-        /*481px*/
-        @media (min-width: 30em) {
-
-            /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
-            .posting {
-                font-size: 3vw;
-            }
-
-            .date-it {
-                font-size: 2vw;
-            }
-
-            .title-it {
-                font-size: 4vw;
-            }
-        }
-
-        @media (min-width: 40em) {
-
-            /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
-            .posting {
-                font-size: 3vw;
-            }
-
-            .date-it {
-                font-size: 1.5vw;
-            }
-
-            .title-it {
-                font-size: 3.5vw;
-            }
-        }
-
-        @media (min-width: 60em) {
-
-            /* tablet, landscape iPad, lo-res laptops ands desktops */
-            .posting {
-                font-size: 2vw;
-            }
-
-            .date-it {
-                font-size: 1vw;
-            }
-
-            .title-it {
-                font-size: 2.6vw;
-            }
-        }
-
-        @media (min-width: 64em) {
-
-            /* big landscape tablets, laptops, and desktops */
-            .posting {
-                font-size: 1.8vw;
-            }
-
-            .date-it {
-                font-size: 1vw;
-            }
-
-            .title-it {
-                font-size: 2vw;
-            }
-
-        }
-
-        @media (min-width: 80em) {
-
-            /* hi-res laptops and desktops */
-            .posting {
-                font-size: 1.5vw;
-            }
-
-            .date-it {
-                font-size: 0.6vw;
-            }
-
-            .title-it {
-                font-size: 2vw;
-            }
-        }
-
-
-        /*
-        // Extra small devices (portrait phones, less than 576px)
-        // No media query since this is the default in Bootstrap
-
-        // Small devices (landscape phones, 576px and up)*/
-        @media (min-width: 36em) {
-            .posting {
-                font-size: 3vw;
-            }
-
-            .date-it {
-                font-size: 2vw;
-            }
-
-            .title-it {
-                font-size: 4vw;
-            }
-        }
-
-
-        /*        // Medium devices (tablets, 768px and up)*/
-        @media (min-width: 48em) {
-            .posting {
-                font-size: 3vw;
-            }
-
-            .date-it {
-                font-size: 1.5vw;
-            }
-
-            .title-it {
-                font-size: 3.5vw;
-            }
-        }
-
-
-        /*        // Large devices (desktops, 992px and up)*/
-        @media (min-width: 62em) {
-            .posting {
-                font-size: 2vw;
-            }
-
-            .date-it {
-                font-size: 1vw;
-            }
-
-            .title-it {
-                font-size: 2.6vw;
-            }
-        }
-
-        /*        // Extra large devices (large desktops, 1200px and up)*/
-        @media (min-width: 75em) {
-            .posting {
-                font-size: 1.5vw;
-            }
-
-            .date-it {
-                font-size: 0.6vw;
-            }
-
-            .title-it {
-                font-size: 2vw;
-            }
-        }
-
-        @media (min-width: 100em) {
-
-            /* hi-res laptops and desktops */
-            .posting {
-                font-size: 1.5vw;
-            }
-
-            .date-it {
-                font-size: 0.6vw;
-            }
-
-            .title-it {
-                font-size: 2vw;
-            }
-        }
-
-{% comment %}
-
-        /* The side navigation menu */
-        .sidenav {
-            height: 100%;
-            /* 100% Full-height */
-            width: 0;
-            /* 0 width - change this with JavaScript */
-            position: fixed;
-            /* Stay in place */
-            z-index: 1;
-            /* Stay on top */
-            top: 0;
-            left: 0;
-            background-color: #111;
-            /* Black*/
-            overflow-x: hidden;
-            /* Disable horizontal scroll */
-            padding-top: 60px;
-            /* Place content 60px from the top */
-            transition: 0.5s;
-            /* 0.5 second transition effect to slide in the sidenav */
-        }
-
-        /* The navigation menu links */
-        .sidenav a {
-            padding: 8px 8px 8px 32px;
-            text-decoration: none;
-            font-size: 25px;
-            color: #818181;
-            display: block;
-            transition: 0.3s
-        }
-
-        /* When you mouse over the navigation links, change their color */
-        .sidenav a:hover,
-        .offcanvas a:focus {
-            color: #f1f1f1;
-        }
-
-        /* Position and style the close button (top right corner) */
-        .sidenav .closebtn {
-            position: absolute;
-            top: 0;
-            right: 25px;
-            font-size: 36px;
-            margin-left: 50px;
-        }
-
-
-        /* Style the links inside the navigation bar */
-        .topnav a {
-            float: left;
-            display: block;
-            color: #f2f2f2;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-            font-size: 17px;
-        }
-
-        /* Change the color of links on hover */
-        .topnav a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-
-        /* Add a color to the active/current link */
-        .topnav a.active {
-            background-color: #4CAF50;
-            color: white;
-        }
-
-        /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-        @media screen and (max-height: 450px) {
-            .sidenav {
-                padding-top: 15px;
-            }
-
-            .sidenav a {
-                font-size: 18px;
-            }
-        }
-
-        a svg {
-            transition: all .5s ease;
-
-        &
-        :hover {
-            #transform: rotate(180deg);
-        }
-
-        }
-
-        #ico {
-            display: none;
-        }
-
-        .menu {
-            background: #000;
-            display: none;
-            padding: 5px;
-            width: 320px;
-        @include border-radius(5 px);
-
-            #transition: all 0.5s ease;
-
-        a {
-            display: block;
-            color: #fff;
-            text-align: center;
-            padding: 10px 2px;
-            margin: 3px 0;
-            text-decoration: none;
-            background: #444;
-
-        &
-        :nth-child(1) {
-            margin-top: 0;
-        @include border-radius(3 px 3 px 0 0);
-        }
-
-        &
-        :nth-child(5) {
-            margin-bottom: 0;
-        @include border-radius(0 0 3 px 3 px);
-        }
-
-        &
-        :hover {
-            background: #555;
-        }
-
-        }
-        }
-
-        .nav-link{
-            border-bottom: 0.2rem solid whitesmoke;
-        }
-{% endcomment %}
 
     </style>
 
@@ -617,8 +161,6 @@
 
 <!--end of side nav-->
 {% endcomment %}
-
-
 
 
 <div class="form-group container-fluid wow fadeInRight" style="padding: 1rem;">
@@ -709,88 +251,6 @@
 {% endfor %}
 
 <br>
-
-
-<script>
-
-
-    function vote_here(name, value) {
-        const url_of_this_page = window.location.href;
-        let data = {
-            Name: name,
-            Value: value
-        };
-        $(document).ready(function () {
-            $.ajax({
-                type: "POST",
-                url: url_of_this_page,
-                dataType: 'json',
-                headers: {
-                    "Content-Type": "application/json",
-                    "X-CSRFToken": csrftoken,
-                },
-                data: JSON.stringify(data),
-
-                success: function () {
-                    {#console.log("$.ajax = success");#}
-                    console.log("up voottteeeee!!!!")
-                },
-                error: {
-                    function() {
-                        console.log("#.ajax == failure");
-                    },
-                },
-            });
-
-        });
-
-        let current_number = parseInt(document.getElementById(value).innerText);
-
-        if (name === 'up_voted_It') {
-            current_number = current_number + 1;
-            document.getElementById(value).innerHTML = (current_number);
-        } else if (name === 'down_voted_It') {
-            current_number = current_number - 1;
-            document.getElementById(value).innerHTML = (current_number);
-        } else {
-
-        }
-    }
-
-
-    // using jQuery
-    function getCookie(name) {
-        var cookieValue = null;
-        if (document.cookie && document.cookie !== '') {
-            var cookies = document.cookie.split(';');
-            for (var i = 0; i < cookies.length; i++) {
-                var cookie = jQuery.trim(cookies[i]);
-                // Does this cookie string begin with the name we want?
-                if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                    break;
-                }
-            }
-        }
-        return cookieValue;
-    }
-
-
-    var csrftoken = getCookie('csrftoken');
-
-
-    let maxLength = 240;
-    $('#main-text').keyup(function () {
-        let length = $(this).val().length;
-        let lengths = maxLength - length;
-        $('#chars').text(lengths);
-    });
-
-    if (window.history.replaceState) {
-        window.history.replaceState(null, null, window.location.href);
-    }
-</script>
-
 
 
 {% block body %}
