--- a/templates/static/css/wallOf/wallOf style.css
+++ b/templates/static/css/wallOf/wallOf style.css
@@ -1,7 +1,3 @@
-body {
-    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQByf_x1jOhHRrRfoZ2me4PiVnmsdwH3u4ZVCtRWSDUluMAjONX");
-}
-
 @import url('https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Londrina+Solid&display=swap');
 
@@ -26,18 +22,39 @@ textarea {
     font-size: medium;
 }
 
+
 ::-webkit-input-placeholder {
-    color: white;
+    /* WebKit, Blink, Edge */
+    color: white !important;
+}
+
+:-moz-placeholder {
+    /* Mozilla Firefox 4 to 18 */
+    color: white !important;
+    opacity: 1;
 }
 
 ::-moz-placeholder {
-    color: white;
+    /* Mozilla Firefox 19+ */
+    color: white !important;
+    opacity: 1;
 }
 
+:-ms-input-placeholder {
+    /* Internet Explorer 10-11 */
+    color: white !important;
+}
+
+::-ms-input-placeholder {
+    /* Microsoft Edge */
+    color: white !important;
+}
 
 ::placeholder {
-    color: lightgray;
+    /* Most modern browsers support this now. */
+    color: #e5e5e5 !important;
 }
+
 
 label {
     font-style: italic;
@@ -84,7 +101,7 @@ label {
 }
 
 #chars {
-    padding-left: 12%;
+    padding-left: 8%;
 }
 
 .count-chars {
@@ -100,18 +117,16 @@ label {
     /*320px*/
     /* smartphones, iPhone, portrait 480x320 phones */
     .date-it {
-        font-size: 1vw;
+        font-size: 2vw;
     }
 
     .posting {
-        font-size: 0.1vw;
+        font-size: 3vw;
     }
 
     .title-it {
-        font-size: 1.5vw;
+        font-size: 3.5vw;
     }
-
-
 }
 
 /*481px*/
@@ -197,5 +212,84 @@ label {
 }
 
 
+/*
+// Extra small devices (portrait phones, less than 576px)
+// No media query since this is the default in Bootstrap
+
+// Small devices (landscape phones, 576px and up)*/
+@media (min-width: 36em) {
+    .posting {
+        font-size: 3vw;
+    }
+
+    .date-it {
+        font-size: 2vw;
+    }
+
+    .title-it {
+        font-size: 4vw;
+    }
+}
 
 
+/*        // Medium devices (tablets, 768px and up)*/
+@media (min-width: 48em) {
+    .posting {
+        font-size: 3vw;
+    }
+
+    .date-it {
+        font-size: 1.5vw;
+    }
+
+    .title-it {
+        font-size: 3.5vw;
+    }
+}
+
+
+/*        // Large devices (desktops, 992px and up)*/
+@media (min-width: 62em) {
+    .posting {
+        font-size: 2vw;
+    }
+
+    .date-it {
+        font-size: 1vw;
+    }
+
+    .title-it {
+        font-size: 2.6vw;
+    }
+}
+
+/*        // Extra large devices (large desktops, 1200px and up)*/
+@media (min-width: 75em) {
+    .posting {
+        font-size: 1.5vw;
+    }
+
+    .date-it {
+        font-size: 0.6vw;
+    }
+
+    .title-it {
+        font-size: 2vw;
+    }
+}
+
+@media (min-width: 100em) {
+
+    /* hi-res laptops and desktops */
+    .posting {
+        font-size: 1.5vw;
+    }
+
+    .date-it {
+        font-size: 0.6vw;
+    }
+
+    .title-it {
+        font-size: 2vw;
+    }
+}
