--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -172,7 +172,7 @@
                 <br>
 
                 <input type="submit" hidden name="posted" value="this_post">
-                <button type="submit" class="btn btn-primary" onsubmit="" style="size: 20rem">save</button>
+                <button type="submit" class="btn btn-primary" onsubmit="" style="size: 20rem" name="post">save</button>
                 <br>
                 <br>
             </form>
