--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -172,7 +172,8 @@
                 <br>
 
                 <input type="submit" hidden name="posted" value="this_post">
-                <button type="submit" class="btn btn-primary" onsubmit="" style="size: 20rem" name="post">save</button>
+                <button type="submit" class="btn btn-primary" style="size: 20rem" name="postings">save
+                </button>
                 <br>
                 <br>
             </form>
@@ -237,6 +238,13 @@
                             </div>
                         </div>
 
+                        <form action="" method="post">
+                            {% csrf_token %}
+                            <p>{{ commentF.as_p }}</p>
+                            <button type="submit" title="what do you think?" class="btn btn-primary"
+                                    value="THE W">save
+                            </button>
+                        </form>
 
                     </div>
                 </div>
